--- a/client/importz/ui/components/sponsoredBills.html
+++ b/client/importz/ui/components/sponsoredBills.html
@@ -1,6 +1,7 @@
 <template name="sponsoredBillz">
 	<div class="ui fluid container">
 		<h4 class="ui centered header">Sponsored Bills: </h4>
+		{{! THIS IS CALLED INSIDE OF 'myReps' TEMPLATE }}
 		{{#each sponsored_bills}}
 		<div class="ui tiny list">
 			<div class="item">
