--- a/client/importz/ui/components/wiki.html
+++ b/client/importz/ui/components/wiki.html
@@ -1,8 +1,8 @@
 <template name="wiki">
-	<div class ="ui header segment">
+	<div class ="ui header basic segment">
 		<h3> Bio: </h3>
 	</div>
-	<div class="wiki-text ui segment">
+	<div class="wiki-text ui basic segment">
 			{{wikiText getName }}
 	</div>
 </template>
