--- a/client/imports/ui/components/politicalTree.html
+++ b/client/imports/ui/components/politicalTree.html
@@ -2,7 +2,11 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gojs/1.6.2/go-debug.js"></script>  <!-- use go.js when deploying -->
 </head>
 <template name="politicalTree">
+	
+	<div id="myOverviewDiv" style="width:600px; height:200px; background-color: #ddd;"></div>
+
 	<div id="myDiagramDiv" style="width:600px; height:600px; background-color: #ddd;"></div>
+
 
   {{! > gCivic}}
 
