--- a/client/imports/ui/components/gCivic.html
+++ b/client/imports/ui/components/gCivic.html
@@ -1,4 +1,8 @@
 <template name="gCivic">
+    {{#with data}}
+        {{> politicalTree}}
+    {{/with}}
+
     <div id="rep-container" class="ui fluid container" >
         <h1 class="ui header">Civic Data: </h1>
         {{#with data}}
