fixing lint errors from bithound

--- a/client/imports/ui/components/politicalTree.html
+++ b/client/imports/ui/components/politicalTree.html
@@ -1,10 +1,18 @@
 <head>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gojs/1.6.2/go-debug.js"></script>  <!-- use go.js when deploying -->
+	<script src="scripts/jquery.orgchart.min.js"></script>
+	<link rel="stylesheet" href="styles/jquery.orgchart.css">
+
 </head>
 <template name="politicalTree">
 	
 	<div id="myOverviewDiv" style="width:700px; height:200px; background-color: #ddd;"></div>
 
 	<div id="myDiagramDiv" style="width:700px; height:600px; background-color: #ddd;"></div>
+
+</template>
+
+<template name="polTree">
+<!-- http://capricasoftware.co.uk/#/projects/orgchart/tutorial/basic-chart  -->
 
 </template>
