jquery.orgchart.js implementation, needs tweaking to nest the 'divisionIds' better

--- a/client/imports/ui/components/politicalTree.html
+++ b/client/imports/ui/components/politicalTree.html
@@ -1,10 +1,11 @@
 <head>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gojs/1.6.2/go-debug.js"></script>  <!-- use go.js when deploying -->
-	<script src="scripts/jquery.orgchart.min.js"></script>
-	<link rel="stylesheet" href="styles/jquery.orgchart.css">
-
+	<!-- script src="https://cdnjs.cloudflare.com/ajax/libs/gojs/1.6.2/go-debug.js"></script-->  
+	<!-- use go.js when deploying -->
+	<script src="js/jquery.orgchart.js"></script>
+	<link rel="stylesheet" href="css/jquery.orgchart.css">
 </head>
 <template name="politicalTree">
+<!-- THIS TEMPLATE GETS CALLED FROM GCIVIC TEMPLATE -->
 	
 	<div id="myOverviewDiv" style="width:700px; height:200px; background-color: #ddd;"></div>
 
@@ -13,6 +14,28 @@
 </template>
 
 <template name="polTree">
+<!-- THIS TEMPLATE GETS CALLED FROM GCIVIC TEMPLATE -->
 <!-- http://capricasoftware.co.uk/#/projects/orgchart/tutorial/basic-chart  -->
+<div id="orgChart">
+	<ul id="orgChart-source" class="hide">
+    <li>Pres Obama
+      <ul>
+        <li>VP Biden
+        	<ul>
+        		{{#each offices}}
+            <li> Your {{name}} 
+            	<ul>
+							{{#each officialIndices}}
+			          <li>{{getOfficial 'name' data this}}</li>
+							{{/each}}
+              </ul>
+            </li>
+            {{/each}}
+          </ul>
+        </li>
+      </ul>
+    </li>
+	</ul>
+</div>
 
 </template>
