--- a/client/imports/ui/components/politicalTree.html
+++ b/client/imports/ui/components/politicalTree.html
@@ -18,18 +18,20 @@
 <!-- http://capricasoftware.co.uk/#/projects/orgchart/tutorial/basic-chart  -->
 <div id="orgChart">
 	<ul id="orgChart-source" class="hide">
-    <li>Pres Obama
-      <ul>
-        <li>VP Biden
-        	<ul>
-        		{{#each offices}}
-            <li> Your {{name}} 
-            	<ul>
+ 		{{#each offices}}
+	      		{{#if newRow}}
+						<ul>
+	      		{{/if}}
+ <!--title --><li> Your {{name}} 
+	            	<ul>
 							{{#each officialIndices}}
 			          <li>{{getOfficial 'name' data this}}</li>
 							{{/each}}
               </ul>
             </li>
+	      		{{#if newRow}}
+						<ul>
+	      		{{/if}}            
             {{/each}}
           </ul>
         </li>
