removed loop until fixed in new branch

--- a/client/imports/ui/components/gCivic.html
+++ b/client/imports/ui/components/gCivic.html
@@ -1,7 +1,7 @@
 <template name="gCivic">
     {{#with data}}
         {{!-- {{> politicalTree}} --}}
-        {{> polTree}}
+        {{!-- {{> polTree}} --}}
     {{/with}}
 
     <div id="rep-container" class="ui fluid container" >
