almost fixed with nested templated. need if/else statement to check whether or not to print a new UL inside the LI

--- a/client/imports/ui/components/gCivic.html
+++ b/client/imports/ui/components/gCivic.html
@@ -9,7 +9,7 @@
             <div class="office-container ui segments">
 
                 <h3 class="office-name ui segment centered attached header">
-                    Your {{name}}
+                    Office of {{name}}
                 </h3>
 
                 <div id="rep-card-container" class="ui segment special cards grid"  style="position:relative">
