--- a/client/imports/ui/components/polTree.html
+++ b/client/imports/ui/components/polTree.html
@@ -4,31 +4,30 @@
 </head>
 
 <template name="polTree">
-<!-- THIS TEMPLATE GETS CALLED FROM GCIVIC TEMPLATE -->
 <!-- http://capricasoftware.co.uk/#/projects/orgchart/tutorial/basic-chart  -->
 	<div id="orgChart">
 		<ul id="orgChart-source" class="hide">
-{{#with data}}
-	 		{{#each offices}}
-		 		<li>
-
+			{{#with data}}
+		 		{{#each offices}}
+		 		<li> <strong> Your {{name}}</strong>
 					{{>branch}}
-
-		 		</li>
-			{{/each}}
-{{/with}}
+				</li>
+				{{/each}}
+			{{/with}}
 		</ul>
 	</div>
 </template>
 
-
 <template name="branch">
-	Your {{name}}
-		<ul>
+<!-- if indices are >1 print ul, elseprinnt li. -->
+<ol>
 			{{#each officialIndices}}
-				<li>
-					{{getOfficial 'name' data this}}
+
+				<li> 	
+				<p>{{getOfficial 'name' data this}}</p>
+				
+				{{>branch}}
 				</li>
 			{{/each}}
-		</ul>
+</ol>
 </template>
