applied color scheme to sass variables, started styling a bit. figured out semantic jquery effects for each helper, can style that now and add effects. need to compartmentalize the methods a bit; i.e. want to set the wordcloud helper to take a session variable of wordcloud text; the wordcloud text changes depending on what page you are on. Also added wiki summary of the role.

--- a/client/imports/ui/components/legiScan-search.html
+++ b/client/imports/ui/components/legiScan-search.html
@@ -1,5 +1,5 @@
 <template name="legiScanSearch">
-	<div id="legiSearch" class="ui sticky segment">
+	<div id="legiSearch" class="ui segment">
     <form id="legi-search" class="ui form">
       <div class="field">
         <label>Search for an issue in {{location}}: </label>
