--- a/client/imports/ui/components/polTree.html
+++ b/client/imports/ui/components/polTree.html
@@ -6,6 +6,7 @@
 <template name="polTree">
 <!-- http://capricasoftware.co.uk/#/projects/orgchart/tutorial/basic-chart  -->
 	<div id="orgChart">
+	<p id="msg" ></p>
 		<ul id="orgChart-source" class="hide">
 			{{#with data}}
 		 		{{#each offices}}
