--- a/client/imports/ui/style/_variables.scss
+++ b/client/imports/ui/style/_variables.scss
@@ -1,5 +1,3 @@
-$democratic-blue: #232066;
-$republican-red: #E91D0E;
 /*
 9px = 1rem
 10px =1.11rem:  
@@ -22,13 +20,15 @@ $scrn-sm: 41.67rem; //375px
 
 // ---------------------->>>  COLORS  <<<<--------------------------------- //
 
-$clr-primary: #079 !default;
-$clr-dark: #003 !default;
-$clr-light: #eef !default;
-$clr-light-trans: rgba(238, 238, 255, 0.8) !default;
-$clr-pwblue: rgba(0, 152, 255, 1);
-$clr-up: rgba(0, 220, 50, 1);
-$clr-down: rgba(255, 0, 0, 1);
+$clr-primary: rgba(96,0,0,1); 	//#600000
+$clr-secondary: rgba(0,0,96,1);	//#000060
+$clr-accent: rgba(150,0,150,1); //#960096
+$clr-dark: rgba(100,96,100,1); //#646064
+$clr-light: rgba(183,180,183,1); //#B7B4B7
+$clr-white: rgba(242,242,235,1); //#F2F2EB
+
+$clr-good: rgba(0, 220, 50, 1);
+$clr-bad: rgba(255, 0, 0, 1);
 $clr-info: rgba(220, 200, 0, 1);
 
 // ---------------------->>>  LAYOUT  <<<<--------------------------------- //
@@ -41,6 +41,21 @@ $md-font-size: 1.111rem;
 $lg-font-size: 1.222rem;
 $xl-font-size: 1.333rem;
 
-// ---------------------->>>  MUI   <<<<--------------------------------- //
 
 //===================================================================
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
