discovered that when zipcode is entered, bill search doesn't change state; no method exists in app to convert zip to state. there is an api though..

--- a/client/imports/ui/components/ipInfo.html
+++ b/client/imports/ui/components/ipInfo.html
@@ -1,6 +1,6 @@
 <template name="ipInfo">
 		<div id="ipInfo" class="ui segment">	
-			<form id="state-form" class="ui {{locating}} form">
+			<form id="state-form" class="ui form">
 				<div class="field">
 					{{#if location.region}}
 						<label> Not in {{location.region}}? Enter your zipcode here: </label>
