--- a/client/imports/ui/components/legiScan-search.html
+++ b/client/imports/ui/components/legiScan-search.html
@@ -1,10 +1,10 @@
 <template name="legiScanSearch">
 	<div id="legiSearch" class="ui segment">
-    <form id="legi-search" class="ui form">
-      <div class="field">
-        <label>Search for an issue in {{location}}: </label>
-        <input id="query" name="query" type="text" placeholder="firearms..."/>
-      </div>
-    </form>
+	    <h4 class="ui header ">Search for an issue in {{location}}: </h4>
+	    <form id="legi-search" class="ui form">
+			<div class="ui search">
+			<input id="query" class="prompt" name="query" type="text" placeholder="firearms..."/>
+			</div>
+	    </form>
 	</div>
 </template>
