--- a/client/imports/ui/components/upcoming.html
+++ b/client/imports/ui/components/upcoming.html
@@ -1,8 +1,13 @@
 <template name="upcoming">
-<div>
-<h4>Committee Memberships: </h4>
+<div class="ui segment">
+	<h4 class="ui header">Upcoming Bills: </h4>
+	<div class="ui tag labels">
 	{{#each upcoming}}
-		<span>{{this.name}}</span>
+		<span class="ui label" data-variation="basic">
+			<a href="{{url}}"> {{bill_id}} </a>
+		</span>
+		<div class="ui fluid popup hidden">{{description}}</div>
 	{{/each}}
+	</div>
 </div>
 </template>
