--- a/client/imports/ui/components/sponsoredBills.html
+++ b/client/imports/ui/components/sponsoredBills.html
@@ -1,34 +1,15 @@
-<template name="sponsoredBillz">
-	<div class="ui fluid container">
-		<h4 class="ui centered header">Sponsored Bills: </h4>
-		{{! THIS IS CALLED INSIDE OF 'myReps' TEMPLATE }}
-		{{#each sponsored_bills}}
-		<div class="ui tiny list">
-			<div class="item">
-				<i class="legal icon"></i>
-				<div class="content">
-					<a class="header" href="{{urls.congress}}" >{{bill_id}}</a>
-					<div class="description"> {{official_title}} </div>
-				</div>
-			</div>
-		</div>
-		{{/each}}
-	</div>
-</template>
-
 <template name="sponsoredBills">
 	<div class="ui container">
 		<h4 class="ui centered header">Sponsored Bills: </h4>
-		<div class ="ui tag labels">
-		{{#each sponsored_bills}}
-		<span class="ui accordion label">
-			<a class="title " href="{{urls.congress}}" >{{bill_id}}</a>
-			<i class="dropdown icon"></i>
-			<span class="content">
-				<p class="transition hidden"> {{official_title}} </p>
+		<div class="ui tag labels">
+		{{#each sponsored_bills bioguide_id}}
+			<span class="ui label" data-variation="basic">
+				<a href="{{urls.congress}}"> {{bill_id}} </a>
 			</span>
-		</span>
+			<div class="ui fluid popup hidden">{{official_title}}</div>
+		{{render}}
 		{{/each}}
 		</div>
 	</div>
+
 </template>
