--- a/client/imports/ui/layouts/ApplicationLayout.html
+++ b/client/imports/ui/layouts/ApplicationLayout.html
@@ -4,7 +4,7 @@
         <div id="sideBar" class="five wide column fixed">
             {{> ipInfo}}
             {{> legiScanSearch}}
-            {{!-- {{> wordCloud}} --}}
+            {{> wordCloud}}
             {{> upcoming}}
         </div>
         <div id="content" class="eleven wide column">
