--- a/client/imports/ui/components/legiScan-search.html
+++ b/client/imports/ui/components/legiScan-search.html
@@ -1,9 +1,10 @@
 <template name="legiScanSearch">
 	<div id="legiSearch" class="ui segment">
-	    <h4 class="ui header ">Search for an issue in {{location}}: </h4>
-	    <form id="legi-search" class="ui form">
-			<div class="ui search">
-			<input id="query" class="prompt" name="query" type="text" placeholder="firearms..."/>
+	    
+	    <form id="legi-search" class="ui search" action="/bills">
+			<div class="ui icon input">
+				<input id="query" class="prompt" name="query" type="text" placeholder="Search the Laws in {{location}}..."/>
+				<i class="search icon"></i>
 			</div>
 	    </form>
 	</div>
