--- a/client/imports/ui/components/legiScan-search.html
+++ b/client/imports/ui/components/legiScan-search.html
@@ -1,11 +1,12 @@
 <template name="legiScanSearch">
-	<div id="legiSearch" class="ui segment">
+	<div id="legiSearch" class="ui centered">
 	    
 	    <form id="legi-search" class="ui search" action="/bills">
 			<div class="ui icon input">
 				<input id="query" class="prompt" name="query" type="text" placeholder="Search the Laws in {{location}}..."/>
 				<i class="search icon"></i>
 			</div>
+			<div class="results"></div>
 	    </form>
 	</div>
 </template>
