--- a/client/imports/ui/components/wiki.html
+++ b/client/imports/ui/components/wiki.html
@@ -3,7 +3,7 @@
 		<div class="wiki-text ui basic segment">
 			<p>
 				{{wikiText getVal this }}
-				[<a href="https://en.wikipedia.org/wiki/{{this}}" alt="More at Wikipedia.com">...</a>]
+				<a href="https://en.wikipedia.org/wiki/{{this}}" alt="More at Wikipedia.com">...</a>
 			</p>
 		</div>
 	{{else}}
