--- a/client/imports/ui/style/index.sass
+++ b/client/imports/ui/style/index.sass
@@ -13,6 +13,7 @@ html
 
 body
   padding: 1.5rem
+  padding-bottom: 30px
   //background-color: $color-primary-4
   background-color: $clr-white
 
@@ -56,10 +57,6 @@ body
   margin: 0 !important
   padding: 0 !important
 
-
 #wcloud
   //width: 100%
   min-height: 200px
-
-#charts
-  border: 1px solid $clr-secondary
