added 'logo'; added upcoming elections and fundraiser info; styled all above

--- a/client/imports/ui/layouts/ApplicationLayout.html
+++ b/client/imports/ui/layouts/ApplicationLayout.html
@@ -7,7 +7,7 @@
             {{> wordCloud}}
             {{> upcoming}}
         </div>
-        <div id="content" class="eleven wide column">
+        <div id="wrapper" class="eleven wide column">
             {{> yield "content"}}
         </div>
     </div>
