--- a/client/imports/ui/style/index.sass
+++ b/client/imports/ui/style/index.sass
@@ -13,9 +13,12 @@ html
 
 body
   padding: 1.5rem
-  padding-bottom: 30px
+  padding-top: 9rem
   //background-color: $color-primary-4
   background-color: $clr-white
+
+#wrapper
+  padding-bottom: 2.5rem
 
 // To allow the sidebar to scroll with the rest of the page
 #sideBar
@@ -24,6 +27,16 @@ body
 
 #mainWindow
 	position: relative
+
+#main-menu
+  .logo 
+    height: 9rem
+    width: 18rem
+    filter: hue-rotate(270deg);
+    -webkit-filter: hue-rotate(270deg);
+    -moz-filter: hue-rotate(180deg);
+    -o-filter: hue-rotate(180deg);
+    -ms-filter: hue-rotate(180deg);
 
 .segment
 	padding: 1rem !important
