styled elections page a bit, need some work. added favicon for no real reason

--- a/client/imports/ui/components/elections.html
+++ b/client/imports/ui/components/elections.html
@@ -1,14 +1,18 @@
 <template name="elections">
 		{{#with data}}
+<div class="ui container">
 	<h2>Upcoming Elections:</h2>
-	<div>
-
+	<div class="ui compact piled segments">
 		{{#each elections}}
 		<div class="ui segment">
-				<h3>{{name}} - {{electionDay}}</h3>
+			<div class="content">
+				<a class="ui large purple ribbon label" title="Mark Your Calendar!">{{electionDay}}</a>
+				<span class="ui">{{name}}</span> 
+			</div>
 		</div>
 		{{/each}}
 	</div>
+</div>
 	{{/with}}
 </template>
 
