capitalizes the proper nouns in the address

--- a/client/imports/ui/components/gCivic.html
+++ b/client/imports/ui/components/gCivic.html
@@ -56,9 +56,9 @@
                                     {{#each this}}
                                         <div class="centered content">
                                             <p>
-                                            {{this.line1}}<br />
-                                            {{this.line2}}<br />
-                                            {{this.city}}, {{this.state}}  {{this.zip}}
+                                            {{capitalize this.line1}}<br />
+                                            {{capitalize this.line2}}<br />
+                                            {{capitalize this.city}}, {{this.state}}  {{this.zip}}
                                             </p>
                                         </div>
                                     {{/each}}
